--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# .gitignore
-# package-lock.json
-# package.json
-# tailwind.config.js
-# /node_modules
+.gitignore
+package-lock.json
+package.json
+tailwind.config.js
+/node_modules
